<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_24" />
        <item
            android:id="@+id/nav_items"
            android:title="@string/nav_items"
            android:icon="@drawable/ic_list_24" />
        <item
            android:id="@+id/nav_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_account_circle_24" />
        <item
            android:id="@+id/nav_language"
            android:title="@string/nav_language"
            android:icon="@drawable/ic_translate_24" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"
            android:icon="@drawable/ic_logout_24" />
    </group>
</menu>
